2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>

	* TorrentManager.cs:
	* TrackerManager.cs: Display the number of number of new peers added as
	well as the number of peers which already existed.

2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>

	* PeerManager.cs:
	* DiskManager.cs:
	* ListenManager.cs:
	* TorrentManager.cs: Fix a lot of build warnings

2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>

	* TrackerManager.cs: Ensure that empty tiers are not added.

2008-06-05  Alan McGovern <alan.mcgovern@gmail.com> 

	* TrackerManager.cs, ConnectionManager.cs: Rename from
	  EncryptionTypes.None -> EncryptionTypes.PlainText

2008-06-05  Alan McGovern <alan.mcgovern@gmail.com> 

	* TorrentManager.cs, ListenManager.cs: Rename EncryptionTypes.None to
	  EncryptionTypes.PlainText.

2008-05-31  Alan McGovern <alan.mcgovern@gmail.com> 

	* TorrentManager.cs: When none of the files exist on disk - fire the
	  event saying all pieces failed

2008-04-07  Alan McGovern <alan.mcgovern@gmail.com> 

	* ConnectionManager.cs: Hack-fix: In some cases it can take up to 190
	  seconds for a pending connection request to time out. Force the
	  connection attempt to abort after 10 seconds if it is not
	  successful.

2008-03-31  Alan McGovern <alan.mcgovern@gmail.com> 

	

2008-03-31  Alan McGovern <alan.mcgovern@gmail.com> 

	* TorrentManager.cs: Fixes #375377 - FastResume data correctly reloaded from
	  disk

2008-03-30  Alan McGovern <alan.mcgovern@gmail.com> 

	* PieceManager.cs: This wasn't supposed to hit svn...

2008-03-30  Alan McGovern <alan.mcgovern@gmail.com> 

	* TorrentManager.cs: Bugfix: When loading fast resume, trigger the
	  PieceHashed event to update per-file progress.

2008-02-02  Alan McGovern <alan.mcgovern@gmail.com> 

	* ConnectionManager.cs: Never try to download more data than we are
	  expecting - slight performance hit, but fixes issue when integrating
	  with other programs which expect to be able to receive *exactly* the
	  data i request.
