@@ -41,8 +41,16 @@ namespace MonoTorrent.Client
     // From this list we will make requests for all the blocks until the piece is complete.
     public class EndGamePicker : PiecePicker
     {
-        static Predicate<Request> TimedOut = delegate(Request r) { return r.Block.RequestTimedOut; };
-        static Predicate<Request> NotRequested = delegate(Request r) { return r.Block.RequestedOff == null; };
+        static Predicate<Request> TimedOut = PTimedOut;
+        static Predicate<Request> NotRequested = PNotRequested;
+		static bool PTimedOut (Request r)
+		{
+			return r.Block.RequestTimedOut;
+		}
+		static bool PNotRequested (Request r)
+		{
+			return r.Block.RequestedOff == null;
+		}
 
         // Struct to link a request for a block to a peer
         // This way we can have multiple requests for the same block
