@@ -1,3 +1,9 @@
+2009-01-17  Alan McGovern  <amcgovern@novell.com>
+
+	* EndGamePicker.cs: Older versions of mono can't compile this construct
+	properly, so rewrite to have static methods instead of static anon
+	delegates.
+
 2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>
 
 	* SlidingWindowPicker.cs: Fix a lot of build warnings
