@@ -1,3 +1,7 @@
+2009-01-17  Alan McGovern  <amcgovern@novell.com>
+
+	* PieceManager.cs: Add cast to allow older versions of mono to compile.
+
 2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>
 
 	* TorrentManager.cs:
